# oai2ollama

./: pyproject.toml
