[project]
name = "oai2ollama"
version = "1.2.8.2"
description = "Wrap any OpenAI-compatible API into an Ollama-compatible API."
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "dotenv-pth~=1.0.0",
    "fastapi>=0.115.14,<0.136.0",
    "httpx[http2]~=0.28.1",
    "pydantic-settings>=2.10.1,<2.14.0",
    "uvicorn-hmr~=0.1.1",
]

[project.urls]
documentation = "https://oai2ollama.vercel.app/"
repository = "https://github.com/CNSeniorious000/oai2ollama"

[project.scripts]
oai2ollama = "oai2ollama:start"

[build-system]
requires = ["uv_build>=0.7,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.m.aliases]
dev = "uvicorn-hmr oai2ollama:app --port 11434"
df = "deno fmt --line-width 12345 --prose-wrap preserve docs"
z = "uv run zensical serve"

[tool.ruff]
line-length = 320

[tool.ruff.lint]
extend-select = [
    "F",    # flake8
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[dependency-groups]
dev = ["mkdocstrings-python~=2.0.1", "ruff~=0.15.7", "zensical==0.0.40"]

[tool.pyright]
typeCheckingMode = "standard"
